# hs-kvdbdns

./: .gitignore  LICENSE  README.md  dns-api.cabal  hs-dns-api.cabal  hs-kvdbdns-dns.cabal
Data/ByteString/: Base32.hs
Data/String/: Base32.hs  Parse.hs
Network/DNS/: API.hs  KVDB.hs
Network/DNS/API/: Bind.hs  Client.hs  Connection.hs  Error.hs  FQDN.hs  Packer.hs  Resolv.hs  Server.hs  Types.hs  Utils.hs
Network/DNS/API/Bind/: Class.hs  Parser.hs  Types.hs
Network/DNS/KVDB/: Client.hs  Server.hs  Types.hs  Utils.hs
Tests/: ArbitraryByteString.hs  EncodeByteString.hs  EncodeRequest.hs  EncodeResponse.hs  EncodeString.hs  Tests.hs
example/: API.hs  Client.hs  Server.hs  bind.conf
