name:                dns-api
version:             0.2.0.1
synopsis:            A simple API to send command over DNS protocol
description:
    DNS API is an API to easily setup a DNS Server or send DNS queries.
    While the standard DNS API is not well implemented here, this library
    provides a simple interface to send special/non-standard queries embedded
    into traditional/standard queries.
license:             Apache-2
license-file:        LICENSE
author:              Nicolas DI PRIMA
maintainer:          ndiprima@alephcloud.com
copyright:           Copyright (c) 2014 AlephCloud, Inc.
Homepage:            https://github.com/alephcloud/hs-dns-api
category:            Network
build-type:          Simple
cabal-version:       >=1.10

Flag executable
  Description:       Build the executable
    Default:           False

library
  exposed-modules:     Network.DNS.API
                     , Network.DNS.API.Server
                     , Network.DNS.API.Connection
                     , Network.DNS.API.Client
                     , Network.DNS.API.Packer
                     , Network.DNS.API.Error
                     , Network.DNS.API.FQDN
                     , Network.DNS.API.Types
                     , Network.DNS.API.Utils

                     , Network.DNS.API.Bind
                     , Network.DNS.API.Bind.Class
                     , Network.DNS.API.Bind.Parser
                     , Network.DNS.API.Bind.Types

  other-modules:       Data.String.Parse

  build-depends:       base >=4.7 && <4.8
                     , containers
                     , network
                     , dns  >= 1.4.4
                     , sandi
                     , iproute
                     , bytestring
                     , data-default
                     , stm
                     , mtl
                     , transformers >= 0.4
                     , ghc-prim
                     , hourglass
                     , byteable
                     , bsparse >= 0.0.3
                     , bspack >= 0.0.2
  default-language:    Haskell2010
  ghc-options:       -Wall -fwarn-tabs -O2

Test-Suite           tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      Tests
  Main-is:             Tests.hs
  build-depends:       base >=4.7 && <4.8
                     , bytestring
                     , tasty
                     , tasty-quickcheck
                     , dns-api
                     , mtl
                     , transformers >= 0.4
                     , bsparse >= 0.0.3
                     , bspack >= 0.0.2
                     , byteable
  default-language:    Haskell2010

Executable           Client
  Main-Is:           Client.hs
  hs-source-dirs:    example
  default-language:    Haskell2010
  if flag(executable)
    build-depends:       base >=4.7 && <4.8
                       , bytestring
                       , dns-api
                       , mtl
                       , hourglass
                       , bsparse >= 0.0.3
                       , bspack >= 0.0.2
    Buildable: True
  else
    Buildable: False

Executable           Server
  Main-Is:           Server.hs
  hs-source-dirs:    example
  default-language:    Haskell2010
  if flag(executable)
    build-depends:       base >=4.7 && <4.8
                       , containers
                       , bytestring
                       , data-default
                       , mtl
                       , transformers >= 0.4
                       , bsparse >= 0.0.3
                       , bspack >= 0.0.2
                       , dns-api
                       , hourglass
    Buildable: True
  else
    Buildable: False
